more CSS added, some alignment issues

--- a/css/index.css
+++ b/css/index.css
@@ -28,11 +28,6 @@ body{
     line-height: 1.5;
     font-family: 'Raleway', sans-serif;	
 }
-@media (max-width:500px){
-    h1{
-      font-size:1rem;
-    }
-  }
 h1, p, .name, .bio {	
     font-family: 'Raleway', sans-serif;	
     text-align: center;	
@@ -42,10 +37,20 @@ h1{
     font-size:6rem;
     margin:0;
 }
+
 @media (max-width:500px){
     h1{
       font-size:3rem;
     }
+  
+@media (max-width:500px){
+    p, .name, .bio {	
+    font-family: 'Raleway', sans-serif;	
+    text-align: center;	
+    margin: 4%;	
+    font-size:1rem;
+}	
+  }
   }
 
 a {	
@@ -76,7 +81,7 @@ img:hover {
 
 @media (max-width:500px){
     img{
-      width:70%;
+      width:100%;
       height:19rem;
       display:flex;
     }
@@ -89,8 +94,10 @@ header{
 nav{
     width:30%;
     display:flex;
+    justify-content:center;
     justify-content:space-evenly;
     margin-top:5%;
+    
 }
 nav a{
     color:#626262;
@@ -101,10 +108,20 @@ nav span{
 }
 
 @media (max-width:500px){
-    nav {
-      width:10%;
+    header {
+      width:100%;
       display:flex;
+      justify-content:center;
     }
+  
+  @media(max-width:500px) {
+    nav a{
+      width:30%;
+      font-size:1rem;
+      text-align:center;
+      
+    }
+  }
 
 /*Title Section Styles*/
 .title-container{
@@ -144,15 +161,41 @@ button:hover{
     color:white;
     box-shadow: 2px 2px 1px white;
 }
+  
+  @media (max-width:500px){
+    button{
+      width:30%
+
+    }
+  }
+
 
 @media (max-width:500px){
     .title-container{
       justify-content:center;
       flex-direction:column;
-      flex-wrap:nowrap;
       width:100%;
     }
+
+@media (max-width:500px){
+.title-container div{
+    background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/7/79/John_Martin_-_The_Plains_of_Heaven_-_Google_Art_Project.jpg/1920px-John_Martin_-_The_Plains_of_Heaven_-_Google_Art_Project.jpg');		
+    background-position: center;	
+    color: white;	
+    width:100%;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height:30vh;
+    margin:5% 0;
+
+}
+}
+  
+  
 /*Artists Section Styles */
+
 .artists-container{
     display:flex;
     justify-content: space-around;
@@ -169,10 +212,26 @@ button:hover{
 }
 
 @media (max-width:500px){
-    .artists-container{
-      justify-content:center;
-      flex-direction:column;
-      flex-wrap:nowrap;
-      width:50%;
-    }
+.artist-container{
+    flex-direction: column;
+    flex-wrap:wrap;
+    justify-content: center;
+    justify-content:space-around;
+    align-items: center;
+    height:70vh;
+    margin:20% 20%;
   }
+
+@media (max-width:500px){
+
+.artist{
+    display:flex;
+    flex-direction:column;
+    justify-content:center;
+    align-items:center;
+    height:15vh;
+    width:50%;
+    margin:20% 20%;
+    padding:10% 10%;
+}
+    }
